--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
 			<version>2.3.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+ 			<groupId>mysql</groupId>
+ 			<artifactId>mysql-connector-java</artifactId>
+ 			<version>8.0.25</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
