--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
  			<artifactId>mysql-connector-java</artifactId>
  			<version>8.0.25</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+		<dependency>
+ 			<groupId>jstl</groupId>
+ 			<artifactId>jstl</artifactId>
+ 			<version>1.2</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
