--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,16 @@
 	<name>testing2</name>
 	<description>test project</description>
 	
+	<properties>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <maven.compiler.source>1.8</maven.compiler.source>
+	    <maven.compiler.target>1.8</maven.compiler.target>
+	    
+	    <junit-jupiter.groupId>org.junit.jupiter</junit-jupiter.groupId>
+    	<junit-jupiter.artifactId>junit-jupiter</junit-jupiter.artifactId>
+    	<junit-jupiter.version>5.7.0</junit-jupiter.version>
+  	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -31,6 +41,13 @@
  			<groupId>jstl</groupId>
  			<artifactId>jstl</artifactId>
  			<version>1.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter/5.7.0 -->
+		<dependency>
+		    <groupId>${junit-jupiter.groupId}</groupId>
+		    <artifactId>${junit-jupiter.artifactId}</artifactId>
+		    <version>${junit-jupiter.version}</version>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 	
