--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
 			<version>5.7.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>5.0.0</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
