--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 		    <version>5.0.0</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>selenium-java</artifactId>
+		    <version>2.53.1</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
