--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
 			<version>5.7.0</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>5.0.0</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<properties>
